# FarmFunny

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
.cache/jb/: compilation_graph.txt  index_stats.txt  modules_graph.txt
.cache/jb/symbols/: C__Program_Files_(x86)_Windows_Kits_10_Include_10_0_22621_0_ucrt_conio.h.riff  C__Program_Files_(x86)_Windows_Kits_10_Include_10_0_22621_0_ucrt_corecrt.h.riff  C__Program_Files_(x86)_Windows_Kits_10_Include_10_0_22621_0_ucrt_corecrt_malloc.h.riff  C__Program_Files_(x86)_Windows_Kits_10_Include_10_0_22621_0_ucrt_corecrt_math.h.riff  C__Program_Files_(x86)_Windows_Kits_10_Include_10_0_22621_0_ucrt_corecrt_memcpy_s.h.riff  C__Program_Files_(x86)_Windows_Kits_10_Include_10_0_22621_0_ucrt_corecrt_memory.h.riff  C__Program_Files_(x86)_Windows_Kits_10_Include_10_0_22621_0_ucrt_corecrt_search.h.riff  C__Program_Files_(x86)_Windows_Kits_10_Include_10_0_22621_0_ucrt_corecrt_share.h.riff  C__Program_Files_(x86)_Windows_Kits_10_Include_10_0_22621_0_ucrt_corecrt_stdio_config.h.riff  C__Program_Files_(x86)_Windows_Kits_10_Include_10_0_22621_0_ucrt_corecrt_terminate.h.riff  C__Program_Files_(x86)_Windows_Kits_10_Include_10_0_22621_0_ucrt_corecrt_wconio.h.riff  C__Program_Files_(x86)_Windows_Kits_10_Include_10_0_22621_0_ucrt_corecrt_wctype.h.riff  C__Program_Files_(x86)_Windows_Kits_10_Include_10_0_22621_0_ucrt_corecrt_wdirect.h.riff  C__Program_Files_(x86)_Windows_Kits_10_Include_10_0_22621_0_ucrt_corecrt_wio.h.riff  C__Program_Files_(x86)_Windows_Kits_10_Include_10_0_22621_0_ucrt_corecrt_wprocess.h.riff  C__Program_Files_(x86)_Windows_Kits_10_Include_10_0_22621_0_ucrt_corecrt_wstdio.h.riff  (+121 more)
.fleet/: run.json
.github/actions/: RunTest.yml
.github/workflows/: GitAction.yml
Animals/: Action.h  Animal.h
Animals/Dogs/: DogThing.hpp
lib/action/: basic_action.cpp  basic_action.hpp
lib/common/: EventCandidate.hpp  Logger.cpp  Logger.hpp
lib/event_handler/: event_controller.cpp  event_controller.hpp
lib/models/: Animal.hpp
lib/repository/: animal_repository.hpp
lib/resource/: Food.cpp  Money.cpp  Unit.hpp
(+20 files in other folders)
